# media-proxy

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_LICENSES.md  mypy.ini  pyproject.toml  repository.yaml
.github/: dependabot.yaml
.github/workflows/: builder.yaml  ci.yaml  ci.yml  release-drafter.yml  sync-addon.yml  update-yt-dlp.yml
ha-addon/: Dockerfile  config.yaml  run.py
src/: __init__.py  config.py  constraints.txt  main.py  requirements-dev.txt  requirements.txt  run.py  server.py  streaming.py
src/api/: __init__.py  server.py
src/api/convert/: __init__.py  animimg.py
src/api/internal/: __init__.py  homeassistant.py  placeholder.py
src/control/: __init__.py  fields.py  handlers.py  protocol.py  websocket.py
src/media/: __init__.py  cache.py  exceptions.py  images.py  processing.py  protocol.py  sources.py  video.py
src/output/: __init__.py  ddp.py  protocol.py
src/render/: bbcode_renderer.py  text_renderer.py
src/streaming/: __init__.py  core.py  options.py
src/utils/: __init__.py  fields.py  ha_client.py  hardware.py  helpers.py  metrics.py
